--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "phaser-platformer",
-  "short_name": "phaser-platformer",
+  "name": "2D PLATFORMER by mimoun97",
+  "short_name": "2D PLATFORMER",
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
@@ -13,8 +13,9 @@
       "type": "image/png"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "./",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#4DBA87"
+  "orientation": "landscape",
+  "background_color": "#005784",
+  "theme_color": "#3498DB"
 }
